August_30/August_30/src/objects/ActionItem__c.object
<CustomObject>
    <fields>
        <fullName>Activity_Description__c</fullName>
        <label>Activity Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <label>Activity Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Roadblock</fullName>
                </value>
                <value>
                    <fullName>Moved To Agile Accelerator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Managementing Practice Action Items Prior to Moving to Agile Accelerator</description>
    <label>Action Item</label>
    <nameField>
        <displayFormat>ACTIT-{000}</displayFormat>
        <label>Action Item IC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action_Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Assigned_By__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Activity_Owner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Action Items</label>
    </listViews>
    <listViews>
        <fullName>All_Blocked_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Assigned_By__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Activity_Owner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Roadblock</value>
        </filters>
        <label>All Blocked Action Items</label>
    </listViews>
    <listViews>
        <fullName>All_Completed_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Assigned_By__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Activity_Owner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>All Completed Action Items</label>
    </listViews>
    <listViews>
        <fullName>All_Items_Moved_to_Agile_Accelerator</fullName>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Assigned_By__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Activity_Owner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Moved To Agile Accelerator</value>
        </filters>
        <label>All Items Moved to Agile Accelerator</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Action_Items</fullName>
        <columns>NAME</columns>
        <columns>Activity_Name__c</columns>
        <columns>Assigned_By__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Activity_Owner__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Assigned,In Progress,Roadblock</value>
        </filters>
        <label>All Open Action Items</label>
    </listViews>
</CustomObject>